Support for module flags #8
Enhancement to support JPMS arguments in the JNLP file